--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <title>Mernssenger</title>
   </head>
   <body>
-    <div id="root" class="flex min-h-screen flex-col"></div>
+    <div id="root" class="flex min-h-dvh flex-col"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
